[build-system]
requires = [
    "setuptools>=59",
    "setuptools_scm[toml]>=6.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["vetiver"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = [
    "connect: tests for posit connect",
]

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = 'post-release'
